--- a/cookbook/src/Styles/less/create.less
+++ b/cookbook/src/Styles/less/create.less
@@ -3,7 +3,7 @@
   flex-flow: column;
   align-items: center;
   width: 100%;
-  overflow: hidden;
+  // overflow: hidden;
 
   .search-and-save {
     display: flex;
@@ -78,7 +78,9 @@
   .preview-and-schedule {
     display: flex;
     margin-top: 30px;
+    padding: 0 30px;
     width: 100%;
+    justify-content: space space-around;
 
     @media @tablet {
       flex-flow: column;
@@ -90,7 +92,6 @@
       border: solid @CBred 3px;
       border-radius: 30px;
       overflow: hidden;
-      margin: 30px 30px 0;
 
       @media @phone{
         flex-flow: column;
@@ -161,13 +162,13 @@
       }
     }
 
-    .schedule {
-      width: 100%;
+    // .schedule {
+    //   width: 100%;
 
-      .buttons {
+    //   .buttons {
 
-      }
-    }
+    //   }
+    // }
 
   }
 }
